--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -1,138 +1,196 @@
-<script type="module">
-  import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs'
-  const swiper = new Swiper('.swiper', {
-      
-              slidesPerView: 1.5,
-              spaceBetween: 10,
-              centeredSlides: true,
-              createElement: true,
-              // Navigation arrows
-              navigation: {
-                  nextEl: '.swiper-button-next',
-                  prevEl: '.swiper-button-prev',
-              },
-              breakpoints: {
-                  990: {
-                      spaceBetween: 30,
-                      slidesPerView: 2.5,
-                  },
-              }
-      
-      
-          })
-          swiper.slideTo(1, 0);</script>
-
 <div data-section-id="{{ section.id }}">
 
-  <section class="sliderBlock">
-    <div class="swiper">
-      <!-- Additional required wrapper -->
-      <div class="swiper-wrapper">
-        <!-- Slides -->
+    <section class="sliderBlock">
+        {% if section.settings.static %}
+        <div class="sliderStatic">
+            <div class="sliderStatic-hidden">
 
-        {% if section.blocks.size > 0 %}
-          {% for block in section.blocks %}
-            {%- assign link = block.settings.link -%}
-            {%- assign label = block.settings.link_label -%}
-            {%- assign image = block.settings.image -%}
+                {% if section.blocks.size > 0 %}
+                {% for block in section.blocks %}
+                {%- assign link = block.settings.link -%}
+                {%- assign label = block.settings.link_label -%}
+                {%- assign image = block.settings.image -%}
 
-            {% if image %}
-              <div class="swiper-slide">
-                <div class="swiper-slide-item">
-                  {% if label != blank %}
-                    <a href="{{ link | escape }}" target="_blank">
-                      {%
-                         render 'rimg'
-                       img: image,
-                       alt: label,
-                       size: '540x640',
-                       lazy: true,
-                       focal_point: image.presentation.focal_point, %}
-                      <span>{{ label | escape }}</span>
-                    </a>
-                  {% else %}
-                    {%
-                       render 'rimg'
-                     img: image,
-                     alt: label,
-                     size: '540x640',
-                     lazy: true,
-                     focal_point: image.presentation.focal_point, %}
-                  {% endif %}
+                {% if image %}
+                <div class="sliderStatic-cont">
+                    <div class="sliderStatic-cont-item">
+                        {% if label != blank %}
+                        <a href="{{ link | escape }}" target="_blank">
+                            {%
+                            render 'rimg'
+                            img: image,
+                            alt: label,
+                            size: '540x640',
+                            lazy: true,
+                            focal_point: image.presentation.focal_point, %}
+                            <span>{{ label | escape }}</span>
+                        </a>
+                        {% else %}
+                        {%
+                        render 'rimg'
+                        img: image,
+                        alt: label,
+                        size: '540x640',
+                        lazy: true,
+                        focal_point: image.presentation.focal_point, %}
+                        {% endif %}
+                    </div>
                 </div>
-              </div>
-            {% else %}
-              {% render 'logo-list-onboarding' %}
-            {% endif %}
-          {% endfor %}
-        {% else %}
-          {% for i in (1..4) %}
-            <div class="swiper-slide">
-              <div class="swiper-slide-item">
-                <a>
+                {% else %}
+                {% render 'logo-list-onboarding' %}
+                {% endif %}
+                {% endfor %}
+                {% else %}
+                {% for i in (1..4) %}
+                <div class="swiper-slide">
+                    <div class="swiper-slide-item">
+                        <a>
 
-                  {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
-                  <span>Button label</span>
-                </a>
-              </div>
+                            {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
+                            <span>Button label</span>
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
+                {% endif %}
             </div>
-          {% endfor %}
-        {% endif %}
-      </div>
-      <!-- If we need navigation buttons -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
+        </div>
 
-    </div>
-  </section>
+        {% else %}
+        <div class="swiper swiper-{{ section.id }}">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+                <!-- Slides -->
+
+                {% if section.blocks.size > 0 %}
+                {% for block in section.blocks %}
+                {%- assign link = block.settings.link -%}
+                {%- assign label = block.settings.link_label -%}
+                {%- assign image = block.settings.image -%}
+
+                {% if image %}
+                <div class="swiper-slide">
+                    <div class="swiper-slide-item">
+                        {% if label != blank %}
+                        <a href="{{ link | escape }}" target="_blank">
+                            {%
+                            render 'rimg'
+                            img: image,
+                            alt: label,
+                            size: '540x640',
+                            lazy: true,
+                            focal_point: image.presentation.focal_point, %}
+                            <span>{{ label | escape }}</span>
+                        </a>
+                        {% else %}
+                        {%
+                        render 'rimg'
+                        img: image,
+                        alt: label,
+                        size: '540x640',
+                        lazy: true,
+                        focal_point: image.presentation.focal_point, %}
+                        {% endif %}
+                    </div>
+                </div>
+                {% else %}
+                {% render 'logo-list-onboarding' %}
+                {% endif %}
+                {% endfor %}
+                {% else %}
+                {% for i in (1..4) %}
+                <div class="swiper-slide">
+                    <div class="swiper-slide-item">
+                        <a>
+
+                            {{ 'collection-1' | placeholder_svg_tag: 'placeholder-svg' }}
+                            <span>Button label</span>
+                        </a>
+                    </div>
+                </div>
+                {% endfor %}
+                {% endif %}
+            </div>
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev prev-{{ section.id }}"></div>
+            <div class="swiper-button-next next-{{ section.id }}"></div>
+
+        </div>
+        {% endif %}
+    </section>
 
 </div>
 
-{% schema %}
-  {
-    "name": "Slider",
-    "class": "shopify-section--slider",
-    "settings": [
-      {
-        "type": "checkbox",
-        "id": "static",
-        "label": "Static",
-        "default": false,
-        "info": "if you want it to be a slider, disable this option"
-      }
-    ],
-    "blocks": [
-      {
-        "type": "feature",
-        "name": "Slider",
-        "settings": [
-          {
-            "type": "image_picker",
-            "id": "image",
-            "label": "Image",
-            "info": "540px x 640px .jpg recommended"
-          }, {
-            "type": "url",
-            "id": "link",
-            "label": "Link"
-          }, {
-            "type": "text",
-            "id": "link_label",
-            "label": "Label",
-            "default": "Button"
-          }
-        ]
-      }
-    ],
-    "presets": [
-      {
-        "category": "Image",
-        "name": "Slider"
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.mjs'
+    let container = document.querySelector(".swiper-{{ section.id }}")
+    if (container) {
+        const swiper = new Swiper(container, {
+            slidesPerView: 1.5,
+            spaceBetween: 10,
+            centeredSlides: true,
+            createElement: true,
+            // Navigation arrows
+            navigation: {
+                nextEl: '.next-{{ section.id }}',
+                prevEl: '.prev-{{ section.id }}',
+            },
+            breakpoints: {
+                990: {
+                    spaceBetween: 30,
+                    slidesPerView: 2.5,
+                },
+            }
+        })
+        swiper.slideTo(1, 0)
+    };
+</script>
 
-      }
-    ],
-    "disabled_on": {
-      "groups": ["*"]
-    }
-  }
+{% schema %}
+{
+"name": "Slider",
+"class": "shopify-section--slider",
+"settings": [
+{
+"type": "checkbox",
+"id": "static",
+"label": "Static",
+"default": false,
+"info": "if you want it to be a slider, disable this option"
+}
+],
+"blocks": [
+{
+"type": "feature",
+"name": "Slider",
+"settings": [
+{
+"type": "image_picker",
+"id": "image",
+"label": "Image",
+"info": "540px x 640px .jpg recommended"
+}, {
+"type": "url",
+"id": "link",
+"label": "Link"
+}, {
+"type": "text",
+"id": "link_label",
+"label": "Label",
+"default": "Button"
+}
+]
+}
+],
+"presets": [
+{
+"category": "Image",
+"name": "Slider"
+
+}
+],
+"disabled_on": {
+"groups": ["*"]
+}
+}
 {% endschema %}
