--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17668,6 +17668,7 @@ img[data-rimg=loaded] {
 
 .sliderStatic {
   overflow: hidden;
+  padding: 100px 0 160px;
 }
 .sliderStatic-hidden {
   display: flex;
@@ -17689,7 +17690,10 @@ img[data-rimg=loaded] {
 }
 
 @media screen and (max-width: 990px) {
-
+  .sliderStatic {
+    padding: 20px 0 50px;
+    background-color: #F9F5EA;
+  }
   .sliderStatic-hidden {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -17786,7 +17790,7 @@ img[data-rimg=loaded] {
     margin: 0;
   }
   .main-footer {
-    margin-top: 25px;
+    margin-top: 0;
   }
 }
 
