--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -161,11 +161,11 @@
 "info": "if you want it to be a slider, disable this option"
 },{
 "type": "range",
-"id": "products_per_row",
+"id": "products_per_slides",
 "label": "Number of slides",
 "min": 2,
 "max": 4,
-"step": 1.5,
+"step": 1,
 "default": 4
 }
 ],
