--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -126,25 +126,27 @@
     let container = document.querySelector(".swiper-{{ section.id }}")
 
     if (!{{ section.settings.static }} ) {
-        console.log(({{ section.blocks.size }} -1) +.5)
-    const swiper = new Swiper(container, {
-        slidesPerView: 1.5,
-        spaceBetween: 10,
-        centeredSlides: true,
-        createElement: true,
-        // Navigation arrows
-        navigation: {
-            nextEl: '.next-{{ section.id }}',
-            prevEl: '.prev-{{ section.id }}',
-        },
-        breakpoints: {
-            990: {
-                spaceBetween: 30,
-                slidesPerView: {{ section.settings.products_per_slides }} +.5,
+        let swiper = new Swiper(container, {
+            slidesPerView: 1.5,
+            spaceBetween: 10,
+            centeredSlides: true,
+            createElement: true,
+            // Navigation arrows
+            navigation: {
+                nextEl: '.next-{{ section.id }}',
+                prevEl: '.prev-{{ section.id }}',
+            },
+            breakpoints: {
+                990: {
+                    spaceBetween: 30,
+                    slidesPerView: {{ section.settings.products_per_slides }} +.5,
+
                 },
             }
         })
-    swiper.slideTo(1, 0)
+
+    if ({{ section.blocks.size }} > 4) { swiper.slideTo(2, 0) }else { swiper.slideTo(1, 0) }
+    
     }
 </script>
 
