--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17656,6 +17656,10 @@ img[data-rimg=loaded] {
   .sliderBlock .swiper-slide-item {
     height: 400px
   }
+  .sliderBlock .swiper-slide-item img,
+  .sliderBlock .swiper-slide-item svg {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1400px) {
