--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4461,6 +4461,8 @@ mark {
 .main-header nav.full .nav-item .icon-wrapper {
   display: flex;
   align-items: center;
+  font-family: "qualy";
+  text-transform: lowercase
 }
 .main-header nav.full .nav-item svg {
   margin-left: 6px;
@@ -4623,8 +4625,7 @@ mark {
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item details {
-  font-family: {{ fonts_font_body_family }}
-  ;
+  font-family: "qualy";
   font-style: {{ fonts_font_body_style }}
   ;
   font-weight: {{ fonts_font_body_weight }}
@@ -14130,7 +14131,7 @@ noscript .disclosure-list--visible {
   }
 }
 .picture-block-content {
-  max-width: 55%;
+  max-width: 70%;
   text-align: center;
 }
 
