--- a/assets/theme.css
+++ b/assets/theme.css
@@ -4057,7 +4057,7 @@ mark {
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a:hover,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item details:hover {
-  opacity: 0.7;
+  /* opacity: 0.7; */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
   filter: alpha(opacity=70);
 }
@@ -14248,7 +14248,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   opacity: 1;
 }
 .product-inner:hover .product-card-figure, .product-inner:focus .product-card-figure, .product-inner:focus-within .product-card-figure {
-  overflow: visible;
+  /* overflow: visible; */
 }
 
 .product-card-figure {
@@ -14487,7 +14487,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   flex-direction: column;
   overflow: hidden;
 
-  height: 370px;
+  height: 412px;
 }
 
 @media screen and (max-width: 720px) {
