--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4637,7 +4637,7 @@ mark {
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a:hover,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item details:hover {
-  opacity: 0.7;
+  /* opacity: 0.7; */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
   filter: alpha(opacity=70);
 }
@@ -15561,7 +15561,8 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
 .product-inner:hover .product-card-figure,
 .product-inner:focus .product-card-figure,
 .product-inner:focus-within .product-card-figure {
-  overflow: visible;
+  ;
+  /* overflow: visible; */
 }
 
 .product-card-figure {
@@ -15809,7 +15810,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   flex-direction: column;
   overflow: hidden;
 
-  height: 370px;
+  height: 412px;
 }
 
 @media screen and (max-width: 720px) {
