--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -15810,7 +15810,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   flex-direction: column;
   overflow: hidden;
 
-  height: 560px;
+  height: 4800px;
 }
 
 @media screen and (max-width: 720px) {
@@ -15881,7 +15881,9 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   .product-grid-default .product-card-figure img:first-of-type {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+
   }
 }
 @supports(object-fit: cover) {
