--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4634,12 +4634,16 @@ mark {
   padding: 4px 42px 7px 25px;
   font-size: 15px;
   transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+  border-bottom: 1px solid transparent;
+
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a:hover,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item details:hover {
   /* opacity: 0.7; */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
   filter: alpha(opacity=70);
+  border-bottom: 1px solid;
+
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a .label,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a .icon,
