--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2334,23 +2334,8 @@ main section:first-child .section-border {
   padding: 1.6rem 0;
 }
 .sub-footer nav a:hover {
-  color: 
+  text-decoration: underline
 
-
-
-
-
-
-
-
-
-
-#455857
-
-
-
-
-;
 }
 .sub-footer nav .social-link {
   display: inline-block;
@@ -4054,14 +4039,14 @@ mark {
   padding: 4px 42px 7px 25px;
   font-size: 15px;
   transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
-  border-bottom: 1px solid transparent;
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a:hover,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item details:hover {
   /* opacity: 0.7; */
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
   filter: alpha(opacity=70);
-  border-bottom: 1px solid;
+ text-decoration: underline
+
 }
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a .label,
 .main-header nav.full .nav-item .dropdown-wrap .dropdown-item a .icon,
@@ -16369,6 +16354,9 @@ color: #F5F5F5;
 
 .main-footer .footer-principal .footer-menu{
   padding: 0 !important;
+}
+.main-footer .footer-principal .footer-menu a:hover{
+  text-decoration: underline;
 }
 
 .main-footer .footer-principal .section-title{
