--- a/assets/theme.css
+++ b/assets/theme.css
@@ -15993,6 +15993,9 @@ img[data-rimg=loaded] {
   align-items: center;
 
 }
+.collectionSlider__slider .product-card-figure img{
+  transform: none
+}
 
 @media screen and (max-width: 1430px) {
   .collectionSlider__container{
@@ -16033,7 +16036,7 @@ img[data-rimg=loaded] {
   margin-bottom: 0;
 }
 .collectionSlider__slider .product-card-details *{
-color: #F5F5F5;
+  color: #F5F5F5 !important;
 }
 
 .collectionSlider__slider .product-inner{
