--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17400,6 +17400,9 @@ img[data-rimg=loaded] {
   align-items: center;
 
 }
+.collectionSlider__slider .product-card-figure img {
+  transform: none
+}
 
 @media screen and (max-width: 1430px) {
   .collectionSlider__container {
@@ -17445,7 +17448,7 @@ img[data-rimg=loaded] {
   margin-bottom: 0;
 }
 .collectionSlider__slider .product-card-details * {
-  color: #F5F5F5;
+  color: #F5F5F5 !important;
 }
 
 .collectionSlider__slider .product-inner {
