--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17400,7 +17400,7 @@ img[data-rimg=loaded] {
   align-items: center;
 
 }
-.collectionSlider__slider .product-card-figure img {
+.collectionSlider__slider .product-card-figure img:last-of-types {
   transform: none
 }
 
