--- a/assets/theme.css
+++ b/assets/theme.css
@@ -15993,9 +15993,10 @@ img[data-rimg=loaded] {
   align-items: center;
 
 }
-.collectionSlider__slider .product-card-figure img{
-  transform: none
+.collectionSlider__slider .product-card-figure img:last-of-type{
+  transform: none;
 }
+
 
 @media screen and (max-width: 1430px) {
   .collectionSlider__container{
