--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17401,7 +17401,8 @@ img[data-rimg=loaded] {
 
 }
 .collectionSlider__slider .product-card-figure img:last-of-type {
-  transform: none
+  transform: none;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1430px) {
