--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1053,6 +1053,10 @@ html .shopify-payment-button .shopify-payment-button__button:hover,
   line-height: normal;
 }
 
+.btn-solid--secondary[disabled] {
+  pointer-events: none;
+}
+
 .btn-solid--tertiary {
   background-color: #43403B;
   border: none;
@@ -11066,6 +11070,10 @@ html:not(.header-layout-minimal) .shopify-section:first-of-type .home-section.sl
   ;
   border-color: {{ settings.background-colour | color_mix: settings.accent-colour, 75 }}
   ;
+  color: #b7a490;
+  font-weight: 400;
+  font-family: "qualy";
+  font-size: 14px;
 }
 
 .product__brand {
@@ -14022,6 +14030,13 @@ noscript .disclosure-list--visible {
     }
   }
 }
+
+@media(max-width: 1399px) {
+  .picture-block.picture-block--desktop-height-natural .picture-block-image {
+    height: calc(100vh - 98px)
+  }
+}
+
 @media(max-width: 719px) {
   .picture-block.picture-block--mobile-height-small .picture-block-image {
     height: 300px;
@@ -14144,6 +14159,17 @@ noscript .disclosure-list--visible {
   font-size: clamp(48px, 5vw, 84px);
   line-height: 1.1;
   color: #43403b;
+}
+
+@media(max-width: 1399px) {
+
+  .picture-block-heading {
+    margin: 60px 0;
+    font-size: clamp(48px, 4vw, 84px);
+  }
+  .picture-block-content {
+    max-width: 60%;
+  }
 }
 @media screen and (max-width: 800px) {
   .picture-block-heading {
@@ -15664,7 +15690,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
 .product-card-details .title {
   margin-top: 5px;
   margin-bottom: 9px;
-  font-size: 18px;
+  font-size: 16px;
   text-align: center;
 }
 
@@ -15770,6 +15796,9 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
 .addtocart-button-active .product-card-interaction-addtocart-available {
   display: flex;
   justify-content: center;
+  font-weight: 400;
+  font-family: "qualy";
+  font-size: 14px;
 }
 
 .product-card-interaction-addtocart-error {
