--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -157,6 +157,7 @@
             centeredSlides: true,
             createElement: true,
             // Navigation arrows
+            loop: true,
             navigation: {
                 nextEl: '.next-{{ section.id }}',
                 prevEl: '.prev-{{ section.id }}',
