add(slider): loop

--- a/sections/dynamic-slider.liquid
+++ b/sections/dynamic-slider.liquid
@@ -155,8 +155,9 @@
             slidesPerView: 1.5,
             spaceBetween: 10,
             centeredSlides: true,
-            createElement: true,
+            //createElement: true,
             // Navigation arrows
+            loop: true,
             navigation: {
                 nextEl: '.next-{{ section.id }}',
                 prevEl: '.prev-{{ section.id }}',
