--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4765,7 +4765,7 @@ mark {
   font-size: 14px;
   color: {{ settings.nav-link-dropdown-colour }}
   ;
-  border-bottom: 1px solid{{ settings.nav-link-dropdown-colour | color_modify: 'alpha', 0.15 }};
+  border-bottom: 1px solid #43403b;
 }
 .mega-nav .list .label a {
   color: {{ settings.nav-link-dropdown-colour }}
