--- a/assets/theme.css
+++ b/assets/theme.css
@@ -4166,7 +4166,7 @@ mark {
   margin: 0 0 16px;
   font-size: 14px;
   color: #ffffff;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+  border-bottom: 1px solid #43403b;
 }
 .mega-nav .list .label a {
   color: #ffffff;
