--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4791,6 +4791,10 @@ mark {
   background-color: {{ settings.nav-background-colour }}
   ;
   transition: opacity 0.15s cubic-bezier(0.4, 0, 0.2, 1);
+
+  font-family: 'qualy';
+  font-style: normal;
+  font-weight: 400;
 }
 .mega-nav .list .list-item a:hover {
   opacity: 0.7;
