--- a/assets/theme.css
+++ b/assets/theme.css
@@ -4170,6 +4170,7 @@ mark {
 }
 .mega-nav .list .label a {
   color: #ffffff;
+  font-weight: 700;
 }
 .mega-nav .list .list-item {
   display: inline-block;
