--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4770,6 +4770,8 @@ mark {
 .mega-nav .list .label a {
   color: {{ settings.nav-link-dropdown-colour }}
   ;
+  font-weight: 700;
+
 }
 .mega-nav .list .list-item {
   display: inline-block;
