fix: slider product

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17504,6 +17504,7 @@ img[data-rimg=loaded] {
 .collectionSlider__slider .product-inner {
   overflow: inherit;
   width: max-content;
+  align-items: center;
 }
 
 .collectionSlider__slider .product-inner:hover .product-card-figure {
