--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16093,6 +16093,7 @@ img[data-rimg=loaded] {
 .collectionSlider__slider .product-inner{
   overflow: inherit;
   width: max-content;
+  align-items: center;
 }
 
 .collectionSlider__slider .product-inner:hover .product-card-figure{
