--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2316,6 +2316,12 @@ main section:first-child .section-border {
   display: inline-block;
   margin: 0 10px;
 }
+@media (max-width: 959px){
+.sub-footer nav li {
+  display: block;
+  margin-bottom: 8px;
+}
+}
 .sub-footer nav li:first-child {
   margin-left: 0;
 }
@@ -2336,6 +2342,11 @@ main section:first-child .section-border {
   width: max-content;
   margin: 0 auto;
   padding: 1.6rem 0;
+}
+@media (max-width: 959px){
+  .sub-footer .footer-nav ul{
+    column-count: 2;
+  }
 }
 .sub-footer nav a:hover {
   text-decoration: underline
@@ -12887,7 +12898,7 @@ noscript .disclosure-list--visible {
   @supports (-webkit-appearance: none) {
     .picture-block.picture-block--mobile-height-natural .picture-block-image img {
       width: auto;
-      height: auto;
+      height: 100%;
       object-fit: fill;
     }
   }
@@ -12910,6 +12921,14 @@ noscript .disclosure-list--visible {
   background-position: center center;
   background-size: cover;
 }
+
+@media (max-width: 959px){
+.picture-block-image {
+  overflow: visible;
+}
+
+}
+
 .picture-block-image img,
 .picture-block-image svg {
   position: absolute;
@@ -12955,7 +12974,7 @@ noscript .disclosure-list--visible {
     display: relative;
   }
   .picture-block-content {
-    padding-top: 50px;
+    padding-top: 80px;
     padding-bottom: 0px;
     margin: 0 auto;
     max-width: 300px !important;
@@ -13025,7 +13044,7 @@ noscript .disclosure-list--visible {
     position: absolute;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: -53px;
     margin: auto;
   }
 
