fix(slider-collection)

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -17489,6 +17489,7 @@ img[data-rimg=loaded] {
 
 .collectionSlider__slider .slideshow--viewport {
   height: auto;
+  display: block;
 }
 
 .collectionSlider__slider .prev,
