--- a/assets/theme.css
+++ b/assets/theme.css
@@ -16083,6 +16083,8 @@ img[data-rimg=loaded] {
 
 .collectionSlider__slider .slideshow--viewport{
   height: auto;
+  display: block;
+
 }
 
 .collectionSlider__slider .prev, .collectionSlider__slider .next{
