fix(cardProduct) title

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -15728,6 +15728,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   margin-bottom: 9px;
   font-size: 16px;
   text-align: center;
+  min-height: 45px;
 }
 
 .product-item__price {
