--- a/assets/theme.css
+++ b/assets/theme.css
@@ -14399,6 +14399,7 @@ body:not(.user-is-tabbing) .shopify-model-viewer-ui .shopify-model-viewer-ui__bu
   margin-bottom: 9px;
   font-size: 16px;
   text-align: center;
+  min-height: 45px;
 
 }
 
